fix: fix footer bar cutting off bottom of certain pages and being unable to scroll

--- a/frontend/src/assets/styles/Goals.module.css
+++ b/frontend/src/assets/styles/Goals.module.css
@@ -267,6 +267,7 @@ body {
   margin: 0 auto;
   font-size: small;
   min-width: 450px;
+  padding-bottom: 100px;
 }
 
 .leaderboard_addfriend {
