--- a/frontend/src/assets/styles/Login.module.css
+++ b/frontend/src/assets/styles/Login.module.css
@@ -3,6 +3,7 @@ html,
 body {
   max-width: 100%;
   padding-left: 0px;
+  min-height: 800px;
   margin: 0px;
   background-color: rgb(255, 255, 255);
   font-family: Arial, sans-serif;
